logs/error.log
/home/Max/Programs/Discord/AntiSpamBot/index.js:21
		}, {})).length === 1 && m.first().createdTimestamp - m.last().createdTimestamp < process.env.TIME_BETWEEN_MESSAGES) try { msg.member.ban() } catch (e) { client.login(process.env.BOT_TOKEN };
		                                                                                                                                                                                  ^^^^^^^^^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1024:16)
    at Module._compile (node:internal/modules/cjs/loader:1072:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1137:10)
    at Module.load (node:internal/modules/cjs/loader:973:32)
    at Function.Module._load (node:internal/modules/cjs/loader:813:14)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:76:12)
    at node:internal/main/run_main_module:17:47
